Added questions feedback and answers feedback in tests downloads. The new feedback is not showed yet in tests results.